# cpptoybox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: bvt-clang18.yml  bvt-gcc13.yml  bvt-msvc17.yml  cmake-multi-platform.yml  test-ci.yml
cmake/: zero.cmake
data_handler/: data_handler.hpp  data_handler_doc.md
data_handler/demo/: CMakeLists.txt  Nodes.csv  Triangles.txt  data_handler_demo.cpp
demo/data_handler_demo/: data_handler_demo.cpp
demo/gaussquad_demo/: CMakeLists.txt  gaussquad3_demo.cpp  gaussquad_demo.cpp
demo/ini_parser_demo/: ini_parser_demo.cpp
demo/mlog_demo/: mlog_demo.cpp
demo/mparser_demo/: CMakeLists.txt  mparser_demo.cpp
demo/msignal_demo/: CMakeLists.txt  msignal_demo.cpp
demo/mtest_demo/: mtest_demo.cpp
demo/mtracer_demo/: mtracer_demo.cpp
demo/pbar_demo/: CMakeLists.txt  pbar_demo.c
demo/progressbar_demo/: CMakeLists.txt  progressbar_demo.cpp
demo/safe_input_demo/: safe_input_demo.cpp
demo/simple_thread_pool_demo/: simple_thread_pool_demo.cpp
demo/var_type_dict_demo/: var_type_dict_demo.cpp
demo/windows_console_demo/: CMakeLists.txt  windows_console_demo.cpp
demos/data_handler_demo/: CMakeLists.txt  data_handler_demo.cpp
demos/ini_parser_demo/: .gitignore  CMakeLists.txt  config.ini  ini_parser_demo.cpp
demos/mlog_demo/: CMakeLists.txt  mlog_demo.cpp
demos/mparser_demo/: mparser_demo.cpp
demos/mtest_demo/: CMakeLists.txt
demos/mtracer_demo/: CMakeLists.txt
demos/progressbar_demo/: CMakeLists.txt  progressbar_demo.cpp
demos/safe_input_demo/: CMakeLists.txt  safe_input_demo.cpp
demos/simple_thread_pool_demo/: CMakeLists.txt  simple_thread_pool_demo.cpp
demos/var_type_dict_demo/: CMakeLists.txt  var_type_dict_demo.cpp
docs/: data_handler_doc.md  gaussquad_doc.md
include/allay/gaussquad/: gausslegendre.hpp  gausslobatto.hpp
include/allay/gaussquad/tools/: quadrature.hpp  quadrature3.hpp
include/allay/ini_parser/: ini_parser.hpp
include/allay/mlog/: mlog_macro.hpp  mlogger.hpp  mloggermanager.hpp
include/allay/mparser/: mparser.hpp
include/allay/mtest/: mtest_macro.hpp
include/allay/mtracer/: mtracer.hpp
include/allay/progressbar/: progressbar.hpp
include/allay/safe_input/: safe_input.hpp
include/allay/simple_thread_pool/: simple_thread_pool.hpp
include/allay/windows_console/: windows_console.hpp
include/data_handler/: data_handler.hpp
include/ini_parser/: ini_parser.hpp
include/mlog/: mlog.hpp  mlogfilemanager.hpp  mlogger.hpp  mloggermanager.hpp  mlogtool.hpp
include/mparser/: mparser.hpp
include/mtest/: mtest.hpp  mtest_macro.hpp
include/mtracer/: mtracer.hpp
include/pbar/: pbar.h
include/progressbar/: progressbar.hpp
include/safe_input/: safe_input.hpp
include/var_type_dict/: var_type_dict.hpp
ini_parser/: ini_parser.hpp
ini_parser/demo/: CMakeLists.txt  config.ini  ini_parser_demo.cpp
mlog/: mlog_macro.hpp  mlogfilemanager.hpp  mlogtool.hpp
mlog/demo/: CMakeLists.txt  mlog_demo.cpp
mparser/: mparser_doc.md
mparser/demo/: CMakeLists.txt  mparser_demo.cpp
msignal/: msignal.hpp  msignal_doc.md
msignal/demo/: CMakeLists.txt  msignal_demo.cpp
mtest/: CMakeLists.txt  mtest.hpp  mtest_macro.hpp
mtest/demo/: CMakeLists.txt
mtest/mtest_demo/: CMakeLists.txt  mtest_demo.cpp
mtest/mtest_main/: CMakeLists.txt  mtest_main.cpp
mtracer/: mtracer.hpp
mtracer/demo/: CMakeLists.txt  mtracer_demo.cpp
progressbar/: progressbar.hpp
progressbar/demo/: CMakeLists.txt  progressbar_demo.cpp
safe_input/: safe_input.hpp
safe_input/demo/: CMakeLists.txt  safe_input_demo.cpp
simple_thread_pool/: simple_thread_pool.hpp
simple_thread_pool/demo/: CMakeLists.txt  simple_thread_pool_demo.cpp
src/: CMakeLists.txt
src/mtest_main/: CMakeLists.txt  mtest_main.cpp
src/pbar/: .clangd  CMakeLists.txt  pbar.c
test/gaussquad/: CMakeLists.txt  gaussquad_test.cpp
var_type_dict/demo/: CMakeLists.txt  var_type_dict.cpp
